--- a/CC-2021.html
+++ b/CC-2021.html
@@ -198,7 +198,7 @@
                         <tr><td>14:40-15:20</td><td>The definition, detection and quantification of quantum nonlocality  </td><td>苏兆峰</td></tr>
                         <tr><th>15:20-15:30</th><th colspan="3">茶歇</th></tr>
                         <tr><td>15:30-16:10</td><td>An Instruction Set Extension to Support Software-Based Masking </td><td>高&emsp;思</td><td rowspan="2">曹&emsp;浩</td></tr>
-                        <tr><td>16:10-16:50</td><td>Post-quantum Crypto scheme Application and Implementation</td><td>蒋林智/td></tr>
+                        <tr><td>16:10-16:50</td><td>Post-quantum Crypto scheme Application and Implementation</td><td>蒋林智</td></tr>
                         </tbody>
                     </table>
                     </br></br>
