--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </head>
     
      
-<body background="image/图片111.jpg">
+<body background="image/DFSC-MAIN-BACKGROUD.jpg">
     <div >
         <div id="head">
             <header style="min-height: 76px;">
@@ -82,7 +82,7 @@
                                     <a href="News.html">News</a>
                                 </li>
                                 <li class="submenu">
-				<a href="Conference.html">Conferences</a>				  
+				<a href="Conference.html">Conference</a>				  
 			</li>
                                  <li class="submenu">
                                     <a href="Training-Camp.html">Training Camp</a>
