--- a/index.html
+++ b/index.html
@@ -98,38 +98,21 @@
                     </div>
                 </nav>
             </header>
-
-            <div id = "introdution">
-                        <div class="introdution">
-                            <div id="theme">				    
-<!--                                 <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;<br/>
-                               <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;<br/> -->
-		<table border="0">
-			<tr>
-				<td><strong><span style="background-color:pink;">Data Security and Users Privacy</span></strong></td>
-				<td><strong><span style="background-color:pink;">Internet of Things Application and Security</span></strong></td>				
-			</tr>
-			<tr>
-				<td height="200px"><img src="image/DFSC图片5.png" style="width:80%; height:80%;"></td>
-				<td height="200px"><img src="image/DFSC图片6.png" style="width:80%; height:80%;"></td>
-			</tr>		
-			<tr>
-				<td><strong><span style="background-color:tomato;">Post Quantum Cryptography</strong></td>
-				<td><strong><span style="background-color:tomato;">Artificial Intelligence Application and Security</strong></td>				
-			</tr>
-			<tr>
-				<td height="200px"><img src="image/DFSC图片1.png" style="width:80%; height:80%;"></td>
-				<td height="200px"><img src="image/DFSC图片3.png" style="width:80%; height:80%;"></td>				
-			</tr>
-			<tr>
-				<td><strong><span style="background-color:violet;">Blockchain and Application</strong></td>
-				<td><strong><span style="background-color:violet;">CloudNative Application and Security</strong></td>
-			</tr>
-			<tr>
-				<td height="200px"><img src="image/DFSC图片2.png" style="width:80%; height:80%;"></td>
-				<td height="200px"><img src="image/DFSC图片4.png" style="width:80%; height:80%;"></td>
-			</tr>
-		</table>                            
+<div id="introduction">
+			<div class="introdution">
+				<div id="title">
+					<strong><p style="text-align: center;font: italic 1.5em Georgia, serif;">Team research area</p></strong>
+				</div>
+		<div id="box" style="margin-top:0px;">
+        <ul>	
+          <li><img src="img/DFSC图片1.png" width="500" height="300"></li>
+          <li><img src="img/DFSC图片2.png" width="500" height="300"></li>
+          <li><img src="img/DFSC图片3.png" width="500" height="300"></li>
+          <li><img src="img/DFSC图片4.png" width="500" height="300"></li>
+	 <li><img src="img/DFSC图片5.png" width="500" height="300"></li>
+          <li><img src="img/DFSC图片6.png" width="500" height="300"></li>
+        </ul>
+                          
 		<div class="footer3 removeborder">
 			<p><a href="contact.html">Contact us</a></p>
 		</div>		
@@ -138,6 +121,25 @@
 			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
 			
 		</div>  
+	<script>    
+	window.onload=function(){    
+    var oBox=document.getElementById('box');    
+    var oUl=oBox.children[0];    
+    var aLi=oUl.children;    
+
+    //复制一份内容 ，制作出无缝的效果   
+    oUl.innerHTML+=oUl.innerHTML;    
+    oUl.style.width=aLi.length*aLi[0].offsetWidth+'px';    
+
+    setInterval(function(){   //开定时器，这样就可以自己切换，无需人工干预。 
+        var l=oUl.offsetLeft-3;  //图片切换，就是移动距离
+        if(l<=-oUl.offsetWidth/2){    
+            l=0;    
+        }    
+        oUl.style.left=l+'px';    
+    },30);    
+};    
+</script>
 		    <script type="text/javascript">
                      function googleTranslateElementInit() {
                      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
