--- a/index.html
+++ b/index.html
@@ -118,7 +118,17 @@
 			</tr>
 			<tr>
 				<td height="200px"><img src="image/DFSC图片1.png" style="width:80%; height:80%;"></td>
-				<td height="200px"><img src="image/DFSC图片3.png" style="width:80%; height:80%;"></td>			
+				<td height="200px"><img src="image/DFSC图片3.png" style="width:80%; height:80%;"></td>				
+			</tr>
+			<tr>
+				<td><strong><span style="background-color:violet;">Blockchain and Application</strong></td>
+				<td><strong><span style="background-color:violet;">CloudNative Application and Security</strong></td>
+			</tr>
+			<tr>
+				<td height="200px"><img src="image/DFSC图片2.png" style="width:80%; height:80%;"></td>
+				<td height="200px"><img src="image/DFSC图片4.png" style="width:80%; height:80%;"></td>
+			</tr>
+		</table>              			
 		<div class="footer3 removeborder">
 			<p><a href="contact.html">Contact us</a></p>
 		</div>		
