--- a/Conference.html
+++ b/Conference.html
@@ -94,7 +94,7 @@
 </head>
     
      
-<body background="image/图片16.jpg">
+<body background="image/图片2.png">
     <div >
         <div id="head">
             <header style="min-height: 76px;">
@@ -117,7 +117,7 @@
                                     <a href="News.html">News</a>
                                 </li>
                                 <li class="submenu">
-				<a href="Conference.html">Conferences</a>				  
+				<a href="Conference.html">Conference</a>				  
 			</li>
                                  <li class="submenu">
                                     <a href="Training-Camp.html">Training Camp</a>
@@ -138,7 +138,7 @@
             <div class="introdution">
                 <div id="theme">	
 <!-- 		<div class="section">
-                    <p style="text-align: center;font-size: 20px">Conferences</p>
+                    <p style="text-align: center;font-size: 20px">Conference</p>
 		</div> -->
 		<p style="text-align:center"><img alt="安全多方计算国际论坛-2019" src="image/circle-cropped.png" style="width:10%; height:10%; margin: 10px;" ><img alt="CSAC-2019" src="image/circle-cropped-csac.png" style="width:10%; height:10%; margin: 10px;" ><img alt="QPQCC" src="image/QPQCC.png" style="width:10%; height:10%; margin: 10px;" ><img alt="安全多方计算国际论坛-2019" src="image/logo.png" style="width:10%; height:10%;margin: 10px;"><img  alt="CC"src="image/CC.png" style="width:10%; height:10%; margin: 10px;" ></a> <br/>
 <!--                      <hr> -->
