--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
             </header>
             <div id = "introdution">
                         <div class="introdution">
-                            <div id="theme">				    
+                            <div id="theme">
+				      <p style="text-align: center;font-size: 20px"><strong>Research||Products||Training</strong></p>
 <!--                                 <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;<br/>
                                <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;<br/> -->
 		<table border="0">
