--- a/Research.html
+++ b/Research.html
@@ -181,7 +181,7 @@ date.setTime(date.getTime() - skew)
                                     <a href="News.html">News</a>
                                 </li>
                                 <li class="submenu">
-				<a href="Conference.html">Conferences</a>				  
+				<a href="Conference.html">Conference</a>				  
 			</li>
                                  <li class="submenu">
                                     <a href="Training-Camp.html">Training Camp</a>
@@ -203,13 +203,18 @@ date.setTime(date.getTime() - skew)
                 <div id="theme">
                     <p style="text-align: center;font-size: 20px"><strong>Projects</strong></p>
 <!--                      <hr color="bisque"> -->
-		 <div class="section1 removeborder">
-                    <p style="text-indent:2em ">Fully Homomorphic Encryption, Lattice-based Cryptography, Secure Multi-party Computation，Hardware and Sotware Implementation of Crypto, Difference of Privacy, AI and IoT etc. <br/> 
-		</div>
+		 
 <!-- 	          <hr color="bisque"> -->
 		    <div class="section2 removeborder"
                     <p style="text-indent:2em ">*Fully Homomorphic Encryption and Implementation<br/>
-                     <p style="text-indent:2em ">*Lattice-based Cryptography and Implementation<br/>
+                    <p style="text-indent:2em ">*Lattice-based Cryptography and Implementation<br/>
+		    <p style="text-indent:2em ">*Secure Multi-party Computation<br/>
+		    <p style="text-indent:2em ">*Hardware and Sotware Implementation of Crypto<br/>
+		    <p style="text-indent:2em ">*Secure Multi-party Computation<br/>
+		    <p style="text-indent:2em ">*Differential Privacy<br/>
+		    <p style="text-indent:2em ">*AI<br/>
+	            <p style="text-indent:2em ">*IoT<br/>
+	    
 		    </div>
 <!--                  <hr color="bisque"> -->
 	       
