--- a/Research.html
+++ b/Research.html
@@ -208,12 +208,13 @@ date.setTime(date.getTime() - skew)
 		    <div class="section2 removeborder"
                     <p style="text-indent:2em ">*Fully Homomorphic Encryption and Implementation<br/>
                     <p style="text-indent:2em ">*Lattice-based Cryptography and Implementation<br/>
-		    <p style="text-indent:2em ">*Secure Multi-party Computation<br/>
+		    <p style="text-indent:2em ">*Secure Multi-party Computation and Application<br/>
+	            <p style="text-indent:2em ">*Blockchain and Application<br/>
 		    <p style="text-indent:2em ">*Hardware and Sotware Implementation of Crypto<br/>
-		    <p style="text-indent:2em ">*Secure Multi-party Computation<br/>
-		    <p style="text-indent:2em ">*Differential Privacy<br/>
-		    <p style="text-indent:2em ">*AI<br/>
-	            <p style="text-indent:2em ">*IoT<br/>
+		    <p style="text-indent:2em ">*Cloud and Application<br/>
+		    <p style="text-indent:2em ">*Differential Privacy and Application<br/>
+		    <p style="text-indent:2em ">*AI and Application<br/>
+	            <p style="text-indent:2em ">*IoT and Application<br/>
 	    
 		    </div>
 <!--                  <hr color="bisque"> -->
