--- a/Research.html
+++ b/Research.html
@@ -34,7 +34,7 @@
 			display:block;
 		}
 	.section1 {
-	          background-color:lightcyan;
+	          background-color:white;
 	          color:black;
 	          clear:both;
 	          text-align:center;
@@ -46,7 +46,7 @@
 /* 		  border-color: skyblue; */
 	}
 	.section2 {
-	          background-color:lightcyan;
+	          background-color:white;
 	          color:black;
 	          clear:both;
 	          text-align:center;
@@ -82,7 +82,7 @@
 	/* 		  */
 		}
 		.section4 {
-		          background-color:lightcyan;
+		          background-color:white;
 		          color:black;
 		          clear:both;
 		          text-align:center;
