--- a/Research.html
+++ b/Research.html
@@ -158,7 +158,7 @@ date.setTime(date.getTime() - skew)
 }
 </script>
 <div id="google_translate_element"></div>    
-<body background="image/图片5.png">
+<body background="image/white.jpg">
     <div >
         <div id="head">
             <header style="min-height: 76px;">
