Update About us Introduction.html

--- a/About us Introduction.html
+++ b/About us Introduction.html
@@ -43,7 +43,7 @@
 		margin-top: 25px;
 		}
 	 .section {
-		 background-color:skyblue;
+		 background-color:white;
 	         color:black;
 	         clear:both;
 	         text-align:center;
@@ -55,7 +55,7 @@
 		 text-align: justify;
 	}
 	.footer {
-	    background-color:skyblue;
+	    background-color:white;
 	    color:black;
 	    clear:both;
 	    text-align:center;
@@ -67,7 +67,7 @@
 	    text-align:justify;
 	}
 	.footer1 {
-	    background-color:skyblue;
+	    background-color:white;
 	    color:black;
 	    clear:both;
 	    text-align:center;
@@ -86,7 +86,7 @@
 		margin-top: 15px;
 		}
 	.induc{
-		color:  skyblue;
+		color:  white;
 	} 
 	.removeborder{ 
 		border: none
@@ -95,7 +95,7 @@
 </head>
     
      
-<body background="image/图片111.jpg">
+<body background="image/white.jpg">
     <div >
         <div id="head">
             <header style="min-height: 76px;">
