--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </head>
     
      
-<body background="image/DFSC-MAIN-BACKGROUD.jpg">
+<body background="image/main-page.jpg">
     <div >
         <div id="head">
             <header style="min-height: 76px;">
