--- a/News.html
+++ b/News.html
@@ -63,7 +63,7 @@
                        width:500px;
                        height:200px;
                        margin: 30px 180px;
-                       background-color:#CCC;
+                       background-color:white;
                        border:#039 solid 1px;
                        overflow:hidden;
 		               text-align: left;
@@ -75,7 +75,7 @@
 			width:500px;
 			height:502px;
 			margin:30px 180px;
-			background-color:#CCC;
+			background-color:white;
 			border:#039 solid 1px;
 			overflow:auto;
 			text-align: left;
@@ -93,7 +93,7 @@
 </head>
     
      
-<body background="image/News.png">
+<body background="image/white.jpg">
     <div >
         <div id="head">
             <header style="min-height: 76px;">
