--- a/News.html
+++ b/News.html
@@ -50,7 +50,7 @@
          #news{
                        width:500px;
                        height:200px;
-                       background-color:#CCC;
+                       background-color:white;
 		       margin: 30px 180px;
                        border:#039 solid 1px;
                        overflow:hidden;
