--- a/News.html
+++ b/News.html
@@ -116,7 +116,7 @@
 					   <a href="News.html">News</a>
 				   </li>
                                 <li class="submenu">
-				<a href="Conference.html">Conferences</a>
+				<a href="Conference.html">Conference</a>
 			</li>
                                  <li class="submenu">
                                     <a href="Training-Camp.html">Training Camp</a>
