--- a/Training-Camp.html
+++ b/Training-Camp.html
@@ -34,7 +34,7 @@
 			display:block;
 		}
 	.section1 {
-	        background-color:aliceblue;
+	        background-color:Coral;
 	        color:black;
 	        clear:both;
 	        text-align:center;
@@ -46,7 +46,7 @@
 /* 		margin-top: 30px; */
 	}
 	.section2 {
-	        background-color:aliceblue;
+	        background-color:Coral;
 	        color:black;
 	        clear:both;
 	        text-align:center;
@@ -58,7 +58,7 @@
 /* 		border-color: skyblue; */
 	}
 	.footer1 {
-	        background-color:aliceblue;
+	        background-color:Coral;
 	        color:black;
 	        clear:both;
 	        text-align:center;
@@ -70,7 +70,7 @@
 		text-align: justify;
 	}
 	.footer2 {
-	        background-color:aliceblue;
+	        background-color:Coral;
 	        color:black;
 	        clear:both;
 	        text-align:center;
@@ -95,7 +95,7 @@
 </head>
     
      
-<body background="image/图片2.png">
+<body background="image/course-backgroud.jpg">
     <div >
         <div id="head">
             <header style="min-height: 76px;">
