--- a/Training-Camp.html
+++ b/Training-Camp.html
@@ -34,7 +34,7 @@
 			display:block;
 		}
 	.section1 {
-	        background-color:Chocolate;
+	        background-color:Darkorange;
 	        color:black;
 	        clear:both;
 	        text-align:center;
@@ -46,7 +46,7 @@
 /* 		margin-top: 30px; */
 	}
 	.section2 {
-	        background-color:Chocolate;
+	        background-color:Darkorange;
 	        color:black;
 	        clear:both;
 	        text-align:center;
@@ -70,7 +70,7 @@
 		text-align: justify;
 	}
 	.footer2 {
-	        background-color:Chocolate;
+	        background-color:Darkorange;
 	        color:black;
 	        clear:both;
 	        text-align:center;
@@ -118,7 +118,7 @@
                                     <a href="News.html">News</a>
                                 </li>
                                 <li class="submenu">
-				<a href="Conference.html">Conferences</a>
+				<a href="Conference.html">Conference</a>
 			</li>
                                  <li class="submenu">
                                     <a href="Training-Camp.html">Training Camp</a>
