--- a/Training-Camp.html
+++ b/Training-Camp.html
@@ -142,7 +142,7 @@
                     <p style="text-align: center;font-size: 20px">Training Camp</p>
 <!--                      <hr> -->
 		     <div class="section1 removeborder">
-                    <p style="text-indent:2em "> DFSC provides the following online Training Camp for Reseacher, Ph.D Candidate, Graduated Students and Practitioners in related fileds. <br/> 
+                    <p style="text-indent:2em "> DFSC provides the following online Training Camp for Reseacher, Ph.D Candidate, Graduated Students and Practitioners. <br/> 
 		    <p style="text-indent:2em ">*Fully Homomorphic Encryption, Implementation and Application</a><br/>
                     <p style="text-indent:2em ">*Lattice-based Cryptography, Implementation and Application</a><br/>
                     <p style="text-indent:2em ">*Post-Quantum Cryptography, Implementation and Application</a><br/>
