--- a/Training-Camp.html
+++ b/Training-Camp.html
@@ -42,7 +42,7 @@
 		border-style: groove;		
 		border-radius: 20px;
 		text-align: justify;
-/* 		border-color: skyblue; */
+/* 		border-color: Orchid; */
 /* 		margin-top: 30px; */
 	}
 	.section2 {
@@ -55,7 +55,7 @@
 		border-radius: 20px;
 		margin-top: 10px;
 		text-align: justify;
-/* 		border-color: skyblue; */
+/* 		border-color: Orchid; */
 	}
 	.footer1 {
 	        background-color:Orange;
@@ -66,7 +66,7 @@
 		border-style: groove;		
 		border-radius: 20px;
 		margin-top: 10px;
-/* 		border-color:skyblue; */
+/* 		border-color:Orchid; */
 		text-align: justify;
 	}
 	.footer2 {
@@ -77,7 +77,7 @@
 	        padding:5px; 
 		border-style: groove;
 		border-radius: 20px;
-/* 		border-color: skyblue; */
+/* 		border-color: Orchid; */
 		margin-top: 10px;
 		text-align: justify;
 	}
@@ -181,7 +181,7 @@
                      </div> 
 <!-- 			    <hr> -->
 		    <div class="footer1 removeborder">
-	            <p style="text-align: center;font-size: 20px"><strong>Implementation and Application Training Camp</p>
+	            <p style="text-align: center;font-size: 20px"><strong>Advanced Implementation and Application Training Camp</p>
                     <p style="text-align: center;font-size: 20px">Spring Training Camp</p>
                     <p style="text-indent:2em ">*Differential Privacy, Implementation and Application-DPLA</a><br/>
                     <p style="text-indent:2em ">*Secure Multi-party Computation, Implementation and Application-SMC</a><br/>
